static/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.4.14,
* Autoprefixer: v10.4.7
* Browsers: last 4 version
*/

:root {
    --mainColour: #FFCD70;
    --secondColour: #E9FF70;
    --thirdColour: #FF8570;
}

* {
    font-family: "MedievalSharp", cursive;

    margin: 0;
    padding: 0;
    -webkit-box-sizing: content-box;
    box-sizing: content-box;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-user-drag: none;
}

/* ############# FONTS ############# */

.medieval {
    font-family: "MedievalSharp", cursive;
    font-style: normal;
}

/* ############# PAGE ############# */

body {
    width: 100vw;
    height: 100vh;
    background-color: black;

    overflow: hidden;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

.gameContainer {
    min-width: 300px;
    width: 50%;
    height: 80%;

    display: -webkit-box;

    display: -ms-flexbox;

    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;

    background-color: var(--mainColour);
    -webkit-box-shadow: 0 0 10rem var(--mainColour);
    box-shadow: 0 0 10rem var(--mainColour);
    border-radius: 20px;

    overflow: hidden;
}

.btn {
    width: 10rem;
    height: 4rem;

    border: none;
    border-radius: 20px;

    font-weight: 900;
    font-size: x-large;

    -webkit-transition: .3s ease;

    -o-transition: .3s ease;

    transition: .3s ease;
}

.main_BG {
    background-color: var(--mainColour);
}

.second_BG {
    background-color: var(--secondColour);
}

.third_BG {
    background-color: var(--thirdColour);
}

.main_C {
    color: var(--mainColour);
}

.second_C {
    color: var(--secondColour);
}

.third_C {
    color: var(--thirdColour);
}

.soundController {
    width: 3em;
    margin: 0.5rem;

    position: absolute;
    top: 0;
    right: 0;
}

.soundController img {
    background-color: rgba(0, 0, 0, 0.226);
    border-radius: 2rem;
}

.blur {
    -webkit-filter: blur(2px);
    filter: blur(2px);
}

.blur:hover {
    -webkit-filter: none;
    filter: none;
}

.click {
    cursor: pointer;
}

/* ############# SCREENS ############# */

/* --------- MAIN MENU --------- */
.mainMenu {
    width: 100%;
    height: 100%;

    border-radius: 20px;

    background-image: url(../resources/img/bg_menu.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-color: white;
}

.gameLogo {
    margin: 6rem 2rem 3rem;
}

.gameLogo h1 {
    font-size: 4rem;
    font-weight: 900;
    word-wrap: break-word;

    color: var(--secondColour);
    text-shadow: 0 0 10px black;
}

.btnMenu {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

.btnMenu button:hover {
    background-color: var(--thirdColour);
    -webkit-box-shadow: 0 0 20px black;
    box-shadow: 0 0 20px black;
    color: var(--secondColour);
}

.language {
    margin-top: 4rem;

    display: -webkit-box;

    display: -ms-flexbox;

    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

.language img {
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
}

.language img:hover {
    -webkit-filter: none;
    filter: none;
}

/* --------- endblock --------- */


/* --------- LEVEL SELECTOR --------- */
.levelSelector {
    display: none;

    width: 100%;
    height: 100%;
    border-radius: 20px;

    background-image: url(../resources/img/bg_menu.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-color: white;

    -webkit-box-orient: vertical;

    -webkit-box-direction: normal;

    -ms-flex-direction: column;

    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

.levelSelector button {
    margin-bottom: 4rem;
    background-color: var(--secondColour);
}

.levelSelector button:hover {
    background-color: var(--thirdColour);
}

.startGame button {
    background-color: rgb(0, 128, 0);
}

.startGame button:hover {
    background-color: rgb(0, 228, 0);
    -webkit-box-shadow: 0 0 40px rgb(251, 255, 0);
    box-shadow: 0 0 40px rgb(251, 255, 0);
}

/* --------- endblock --------- */


/* --------- GAME PLAY --------- */

.gamePlay {
    display: none;

    width: 100%;
    height: 100%;
    border-radius: 20px;
    position: relative;

    background-color: white;
}

.easy {
    background-image: url(../resources/img/bg_easy.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.normal {
    background-image: url(../resources/img/bg_normal.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.hard {
    background-image: url(../resources/img/bg_hard.jpg);
    background-position: right;
    background-repeat: no-repeat;
    background-size: cover;
}

.dialog {
    width: 100%;
    height: 15rem;
    margin-top: -2rem;

    background-color: rgba(139, 132, 123, 0.596);
    /* background-image: url(../resources/img/box_dialog.png);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; */

    overflow: hidden;
}

.question p {
    position: absolute;
    z-index: 999;
    top: 1rem;

    width: 90%;
    height: 15%;

    color: black;
    padding: 3rem 1rem;
    text-wrap: wrap;
    word-wrap: break-word;

    overflow-y: auto;

    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: xx-large;
    font-weight: 600;

}

.gameButtons {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    position: absolute;
    width: 100%;
    bottom: 10rem;
}

.gameButtons button {
    width: 100%;
    height: 6rem;
    padding: 0 1rem;

    text-align: justify;
    font-size: x-large;
    color: white;

    border: none;
    background-color: rgba(0, 0, 0, 0.452);

    overflow: hidden;
    text-wrap: wrap;
    word-wrap: break-word;
    display: inline;
}

.gameButtons button strong,
p {
    display: inline;
}

.gameButtons button:hover {
    background-color: rgba(0, 0, 0, 0.575);
}

.gameController {
    position: absolute;
    bottom: 0;

    width: 100%;
    height: 6rem;

    display: -webkit-box;

    display: -ms-flexbox;

    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;

    background-color: rgba(0, 0, 0, 0.911);
}

.giveNext {
    width: 50%;
    border: none;

    font-size: large;
    font-weight: 900;

    background-color: transparent;
    color: white;

}

#giveUp:hover {
    background-color: rgba(117, 0, 0, 0.527);
}

#next:hover {
    background-color: rgba(14, 117, 0, 0.418);
}

.right {
    font-weight: 900;
    border-radius: 4px;
    -webkit-box-shadow: 0 0 20px greenyellow;
    box-shadow: 0 0 20px greenyellow;
    background-color: greenyellow;
    color: black;
}

.wrong {
    font-weight: 900;
    border-radius: 4px;
    -webkit-box-shadow: 0 0 20px red;
    box-shadow: 0 0 20px red;
    background-color: red;
    color: black;
}

.lives {
    position: absolute;
    margin: 1rem;
    height: 2rem;
    left: 0;
    top: 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.scoreBar {
    position: absolute;
    margin: 0.5rem;
    height: 2rem;
    right: 0;
    top: 0;
    font-size: xx-large;
    font-family: fantasy;
    color: var(--secondColour);
}

/* --------- endblock --------- */


/* --------- score display --------- */

.scoreDisplay {
    width: 100%;
    height: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;

    background-image: url(../resources/img/bg_score_display.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.scoreDisplay button:hover {
    background-color: green;
    -webkit-box-shadow: 0 0 40px green;
    box-shadow: 0 0 40px green;
}

.back {
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;

    display: -webkit-box;

    display: -ms-flexbox;

    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;

    padding: 2rem;
    border-radius: 2rem;
    background-color: rgba(255, 249, 190, 0.144);
    -webkit-backdrop-filter: blur(4px);
    backdrop-filter: blur(4px);
}

#score {
    margin: 1rem 1rem;
    padding: 1rem;
    color: white;
    border-radius: 1rem;
    background-color: rgba(0, 0, 0, 0.733);
    -webkit-box-shadow: 0 0 10px black;
    box-shadow: 0 0 10px black;
}

/* --------- endblock --------- */



/* MOBILE CLASSES */
@media only screen and (hover: none) and (pointer: coarse) {
    .gameContainer {
        width: 100%;
        height: 100%;
    }

    .language {
        margin-top: 10rem;
    }

    .gameController {
        /* height: 10rem; */
        margin-bottom: 6rem;
    }

    .gameButtons {
        bottom: 15rem;
    }
}

